--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "webpack-angular",
-  "version": "1.0.0",
-  "description": "Example of using webpack with an angular",
-  "main": "app/index.js",
+  "name": "MyOwnProject",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "srv": "webpack-dev-server --inline -d"
-  },
-  "keywords": [
-    "webpack",
-    "angular"
-  ],
-  "author": "Volodymyr Paskiv",
-  "license": "MIT",
-  "devDependencies": {
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "angular": "^1.4.8",
-    "webpack-dev-server": "^1.14.0"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "mongoose": "^4.3.3",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
