--- a/public/package.json
+++ b/public/package.json
@@ -14,12 +14,12 @@
   "author": "Volodymyr Paskiv",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
-  },
-  "dependencies": {
     "angular": "^1.4.8",
     "angular-ui-router": "^0.2.15",
+    "css-loader": "^0.23.1",
+    "jquery": "^2.1.4",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
 }
